# NeroArm_ros2

./: .gitignore  CALIBRATED_SETUP.md  QUICK_START.md  README.md  STEP_BY_STEP_GUIDE.md  package.xml  requirements.txt  setup.cfg  setup.py
Log/: OrbbecSDK.log.txt
config/: robot.yaml
launch/: handeye_calibrate.launch.py  vision_grasp.launch.py  vlm_grasp.launch.py
mcp_server/: __init__.py  api_services.py  object_types.py  ros_bridge.py  server.py  task_server.py  test_task.py  visual_servo.py  vlm_client.py  yolo_detector.py
mcp_server/components/: __init__.py  base.py  infra.py  motion.py  perception.py  tracking.py
mcp_server/config/: __init__.py  paths.py  robot.py  runtime.py
mcp_server/grasping/: __init__.py  block_candidates.py  bottle_candidates.py  cylinder_candidates.py  evaluator.py  pipeline.py
mcp_server/models/: __init__.py  geometry.py  grasp.py  results.py
mcp_server/orchestrator/: __init__.py  executor.py  graph.py  place_resolver.py  planner.py  planner_config.py  router.py  task_spec.py  templates.py  types.py
mcp_server/perception/: __init__.py  color_detector.py  cylinder_geometry.py  debug.py  transparent_bottle.py
mcp_server/ros/: __init__.py  bringup.py  camera.py  futures.py  hardware.py  motion.py  octomap.py  planning_scene.py  transforms.py
mcp_server/skills/: __init__.py  base.py  basic.py  gestures.py  manipulation.py  perception.py  (+4 more)
scripts/: run_mcp.example.sh  run_mcp.sh  start_vision_grasp.sh
test/: collect_data.py  depth_test.py  task_test.py
vision_grasp/: grasp_executor.py  test_move_to.py  vlm_picker_node.py
(+33 files in other folders)
